[143][AIM] Fix rainbox animation on narrow yet tall widths
With the introduction of the image chip at the top of the composebox,
the composebox can be too tall, causing the animation to clip at the
corners. To fix this, make the rainbox element bigger.

(cherry picked from commit 4e30a59d5c8a6dd070971d7faa3b9043bfdef5f9)

Bug: 456790026
Fixed: 460125833
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7125139
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1540759}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7148235
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7499@{#1616}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -542,8 +542,8 @@
   top: 50%;
   translate: -50% -50%;
   opacity: 0;
-  /* The gradient is 120% wide to ensure it fills passed the entire container. */
-  width: 120%;
+  /* The gradient is 135% wide to ensure it fills passed the entire container. */
+  width: 135%;
 }
 
 :host([expanded_]) .gradient:before {
